--- a/index.html
+++ b/index.html
@@ -15,50 +15,53 @@
   <main class="main">
     <div class="wrapper">
       <div class="main-content">
-        <section class="nav">
+        <div class="nav">
+          <div class="header-content">
+            <header>
 
-          <section class="proyectos">
-            <h3>VARIANTES DEL PROYECTO</h3>
-            <ul class="nemiun">
-              <li><a href="https://josue1dario2.github.io/Nemium-A/" target="_blank">Nemium A</a></li>
-              <li><a href="https://josue1dario2.github.io/Nemium-B/" target="_blank">Nemium B</a></li>
-              <li><a href="" target="_blank">Nemium C</a></li>
-              <li><a href="" target="_blank">Nemium D</a></li>
-              <li><a href="" target="_blank">Nemium E</a></li>
-            </ul>
-          </section>
+              <section class="proyectos">
+                <h3>VARIANTES DEL PROYECTO</h3>
+                <ul class="nemiun">
+                  <li><a href="https://josue1dario2.github.io/Nemium-A/">Nemium A</a></li>
+                  <li><a href="https://josue1dario2.github.io/Nemium-B/">Nemium B</a></li>
+                  <li><a href="https://josue1dario2.github.io/Nemium-C/">Nemium C</a></li>
+                  <li><a href="https://josue1dario2.github.io/Nemium-D/">Nemium D</a></li>
+                  <li><a href="https://josue1dario2.github.io/Nemium-E/">Nemium E</a></li>
+                </ul>
+              </section>
+              <section class="navegator">
 
+                <h3>CONTENIDO</h3>
+                <nav>
+                  <details open>
+                    <summary>Setup</summary>
+                    <ol>
+                      <li><a href="#google-chrome">Google Chrome</a></li>
+                      <li><a href="#visual-studio-code">Visual Studio Code</a></li>
+                      <li><a href="#figma">Figma</a></li>
+                      <li><a href="#github">GitHub</a></li>
+                    </ol>
+                  </details>
 
-          <section class="navegator">
+                  <details close>
+                    <summary>Conceptos esenciales del Desarrollo Web</summary>
+                    <ol>
+                      <li><a href="#topico-html">Qué es HTML</a></li>
+                      <li><a href="#topico-etiquetas">Etiquetas</a></li>
+                      <li><a href="#topico-dom">DOM</a></li>
+                      <li><a href="#topico-semantica">Semántica</a></li>
+                      <li><a href="#topico-atributos">Atributos</a></li>
+                      <li><a href="#topico-css">Qué es CSS</a></li>
+                    </ol>
+                  </details>
+                </nav>
 
-            <h3>CONTENIDO</h3>
-            <nav>
-              <details open>
-                <summary>Setup</summary>
-                <ol>
-                  <li><a href="#google-chrome">Google Chrome</a></li>
-                  <li><a href="#visual-studio-code">Visual Studio Code</a></li>
-                  <li><a href="#figma">Figma</a></li>
-                  <li><a href="#github">GitHub</a></li>
-                </ol>
-              </details>
+              </section>
 
-              <details close>
-                <summary>Conceptos esenciales del Desarrollo Web</summary>
-                <ol>
-                  <li><a href="#topico-html">Qué es HTML</a></li>
-                  <li><a href="#topico-etiquetas">Etiquetas</a></li>
-                  <li><a href="#topico-dom">DOM</a></li>
-                  <li><a href="#topico-semantica">Semántica</a></li>
-                  <li><a href="#topico-atributos">Atributos</a></li>
-                  <li><a href="#topico-css">Qué es CSS</a></li>
-                </ol>
-              </details>
-            </nav>
+            </header>
+          </div>
 
-          </section>
-
-        </section>
+        </div>
         <hr class="hr-min-screen">
         <section>
           <h1>Curso esencial de HTML y CSS</h1>
